Finish data preprocessing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,8 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 add_subdirectory(lib)
-add_subdirectory(tests)
-add_subdirectory(examples)
+
+file(GLOB_RECURSE src ./src/*.cpp)
+add_executable(main main.cpp ${src})
+# add_subdirectory(tests)
+# add_subdirectory(examples)
